# arnold

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: deploy_prod.yml  deploy_stage.yml  merge_master_ci.yml  pull_request_ci.yml  release_ci.yml
arnold/: __init__.py  constants.py  exceptions.py  pyvenv.cfg  settings.py
arnold/adapter/: __init__.py  plugin.py
arnold/api/api_v1/: api.py
arnold/api/api_v1/endpoints/: case.py  flow_cell.py  plots.py  prep.py  sample.py  step.py  tmp.py  trends.py
arnold/arnold/: pyvenv.cfg
arnold/commands/: base.py  serve.py
arnold/crud/: create.py  read.py  update.py  utils.py
arnold/crud/read/: __init__.py  case.py  flow_cell.py  paginate.py  sample.py  step.py  trend.py
arnold/crud/read/plot/: __init__.py  compare_step_fields.py  format_plot_data.py  trend_nr_recieved_samples.py  trend_step_fields.py  (+1 more)
arnold/models/: api_models.py  context.py  query_params.py  responce_models.py
arnold/models/api/: sample.py
arnold/models/database/: __init__.py  analysis_sample.py  case.py  flow_cell.py  lims_sample.py  sample.py  step.py
tests/: conftest.py  test_arnold.py
tests/api/: test_get_step.py  test_post_sample.py  test_post_step.py
tests/api/endpoints/: test_case_endpoints.py  test_get_query_rules.py  test_get_step.py  test_post_sample.py  test_post_step.py
tests/crud/: test_case.py  test_flow_cell.py  test_sample.py  test_step.py
tests/model/: test_case_model.py
(+8 files in other folders)
