[tool.poetry]
name = "arnold"
version = "2.5.1"
description = ""
authors = ["Christian Oertlin <c.oertlin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pyyaml = "^6.0.1"
pydantic ="^1"
fastapi = "^0.104.1"
pandas = "^2.1.3"
gunicorn = "^21.2.0"
uvicorn = "^0.24.0.post1"
pymongo = "^4.6.1"
mongo-adapter = "^0.3.3"


[tool.poetry.group.dev.dependencies]
pytest = ">=5.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
mongomock = "^4.1.2"
coveralls = "<5"
pylint = "^3.0.2"
mock = "^5.1.0"
pydantic = {extras = ["dotenv"], version = "^1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
